# fractal

./: .gitignore  Cargo.toml
src/: color.rs  main.rs
