[package]
name = "fractal"
version = "0.1.0"
authors = ["alexandre <abour@localhost.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3.4", features = ["macros", "rt-multi-thread", "sync"] }
image = "0.23.12"
rand = "0.7.3"
